# FinAgent

./: .env.example  .gitignore  LICENSE  README.md  docker-compose.yml
backend/: .dockerignore  Dockerfile  alembic.ini  conftest.py  pyproject.toml
backend/app/: main.py
backend/app/core/: config.py  database.py  exceptions.py  health.py  logging.py  schemas.py  tracing.py
backend/app/core/tests/: test_health.py
backend/app/modules/agent/: dependencies.py  graph.py  models.py  prompts.py  registry.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/agent/tests/: fakes.py  test_graph.py  (+2 more)
backend/app/modules/categorization/: dependencies.py  router.py  rules.py  schemas.py  service.py
backend/app/modules/statements/: dependencies.py  models.py  repository.py  router.py  schemas.py  service.py
backend/app/modules/tools/: compare_periods.py  find_subscriptions.py  plot_chart.py  rag_lookup.py  read_document.py  resolve_scope.py  sql_query.py  sql_validation.py  web_search.py
backend/app/modules/transactions/: models.py  repository.py  schemas.py  service.py
backend/app/shared/: embeddings.py  llm.py
backend/app/shared/tests/: test_llm.py
backend/evals/: __init__.py  __main__.py  dataset.py  runner.py  scoring.py
backend/evals/tests/: test_evals.py
backend/migrations/: env.py
backend/migrations/versions/: 5f816d42902e_add_chats_and_chat_messages.py  8a6af2b2d272_seed_default_categories.py  8ca4cb6ee24c_initial_schema.py
backend/tests/: test_agent_api.py  test_categorization_api.py  test_main.py  test_statements_api.py
(+54 files in other folders)
