[project]
name = "finagent"
version = "0.1.0"
description = "FinAgent backend — agentic bank statement analyst"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115",
    "uvicorn[standard]>=0.32",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.30",
    "alembic>=1.13",
    "pydantic>=2.9",
    "pydantic-settings>=2.6",
    "httpx>=0.27",
    "python-multipart>=0.0.17",
    "langchain-core>=0.3",
    "langchain-openai>=0.2",
    "langchain-ollama>=0.2",
    "langgraph>=0.2",
    "sqlglot>=25.0",
    "pdf2image>=1.17",
    "pytesseract>=0.3.13",
    "opencv-python-headless>=4.10",
    "numpy>=1.26",
    "llama-index-core>=0.12",
    "llama-index-vector-stores-qdrant>=0.4",
    "llama-index-embeddings-openai>=0.3",
    "llama-index-embeddings-ollama>=0.5",
    "qdrant-client>=1.12",
]

[dependency-groups]
dev = [
    "pytest>=8.3",
    "pytest-asyncio>=0.24",
    "ruff>=0.7",
    "mypy>=1.13",
]

[tool.ruff]
line-length = 100
target-version = "py311"
extend-exclude = ["migrations/versions"]

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]

[tool.mypy]
python_version = "3.11"
plugins = ["pydantic.mypy"]
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]
